fixed app URL change

--- a/English.lproj/Credits.html
+++ b/English.lproj/Credits.html
@@ -74,7 +74,7 @@
 		<p class="version">Version VERSION_PLACEHOLDER</p>
 		
 		<img width="128" height="128" />
-		<p class="link"><a href="http://www.pixenapp.com">pixenapp.com</a></p>
+		<p class="link"><a href="http://pixenapp.com/">pixenapp.com</a></p>
 	</div>
 	
 	<div id="right">
